# notes

./: .gitignore  README.md  meson.build  resources.qrc
headers/: actionbay.hpp  buttonbay.hpp  constants.hpp  mainwindow.hpp  textbox.hpp
headers/backend/: models.hpp  notesdao.hpp
headers/ui/: actionbay.hpp  buttonbay.hpp  constants.hpp  headerframe.hpp  itemlist.hpp  mainwindow.hpp  models.hpp  notesidebar.hpp  notesmainwindow.hpp  textbox.hpp  texttoolbar.hpp  wordprocessor.hpp
lib/: meson.build
lib/backend/: notesdao.cc
lib/ui/: actionbay.cc  buttonbay.cc  itemlist.cc  mainwindow.cc  notesidebar.cc  notesmainwindow.cc  textbox.cc  wordprocessor.cc
src/: main.cc  meson.build
